# machine-emulator-tools

./: Dockerfile
linux/rollup/http/rollup-http-server/src/: http_service.rs
rollup-http/lambada-http-server/: Cargo.toml
rollup-http/lambada-http-server/src/: http_service.rs  main.rs
rollup-http/lambada-http-server/src/rollup/: mod.rs
rollup-http/lambada-http-server/tests/: lambada-http-server-tests.rs
rollup-http/rollup-http-server/src/: http_service.rs
rollup-http/rollup-http-server/src/rollup/: mod.rs
rollup-http/rollup-http-server/tests/: rollup-http-server-tests.rs
sys-utils/hex/: hex.cpp
sys-utils/libcmt/src/: io-mock.c
