[package]
name = "lambada-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
tokio = { version = "1.14", features = ["macros", "time", "rt-multi-thread", "process"] }
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
actix-web = "4.0.0-rc.2"
regex = "1.5.5"
validator = { version = "0.16", features = ["derive"] }
libc = "0.2"
lazy_static = "1.4.0"
cid = "0.11.0"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
actix-web-validator = "5.0.1"
async-mutex = "1.4"
actix-server = "2.0"
futures = "0.3.29"
env_logger = "0.9"
getopts = "0.2"
rollup-http-client = {path = "../rollup-http-client"}
rollup-http-server = {path = "../rollup-http-server"}
test_gio_server = {path = "../test_gio_server"}
rand = "0.8.5"
rstest = "0.12"

[build-dependencies]
bindgen = "0.69.4"
tonic-build = "0.5"
pkg-config = "0.3.30"